--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -19,7 +19,7 @@
 
   <link rel="shortcut icon" href="/static/img/occrp-logo-bg.png">
 </head>
-<body ng-controller="AppController as app">
+<body ng-controller="AppController as app" ng-keydown="onKey($event)">
   <nav class="navbar navbar-default navbar-fixed-top" id="topnav">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
