--- a/spindle/templates/angular/entities/editor.html
+++ b/spindle/templates/angular/entities/editor.html
@@ -1,16 +1,14 @@
 <div class="entity-editor table-box">
-  <table class="table table-striped">
+  <table class="table table-striped table-bordered" ng-class="{'editable': editable}">
     <tr>
       <th ng-repeat="column in columns" ng-bind="column.title"></th>
     </tr>
-    <tr ng-repeat="row in rows"
-        ng-class="{'selected': row.edit}">
-      <td ng-repeat="cell in row.cells"
-        class="entity-editor-cell"
-        ng-class="{'selected': isCellSelected($parent.$index, $index)}"
-        ng-dblclick="selectCell($parent.$index, $index, $event)">
-        <bind-value ng-if="!row.edit" bind="cell"></bind-value>
-        <bind-edit ng-if="row.edit" bind="cell"></bind-edit>
+    <tr ng-repeat="row in rows">
+      <td ng-repeat="cell in row.cells" class="entity-editor-cell"
+        ng-class="{'selected': cell.selected}"
+        ng-click="clickCell($parent.$index, $index, $event)">
+        <bind-value ng-hide="cell.editing" bind="cell"></bind-value>
+        <bind-edit ng-show="cell.editing" bind="cell"></bind-edit>
       </td>
     </tr>
   </table>
