--- a/spindle/templates/angular/entities/view.html
+++ b/spindle/templates/angular/entities/view.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12" ng-show="data.$schema">
       <div class="pull-right">
-        <collection-add subject="data.id"></collection-add>
+        <collection-add subject="data.id" schema="data.$schema"></collection-add>
       </div>
       <h2>
         <entity-icon schema="data.$schema"></entity-icon>
