--- a/spindle/templates/angular/bind/edit.html
+++ b/spindle/templates/angular/bind/edit.html
@@ -8,3 +8,14 @@
     typeahead-input-formatter="formatCountry($model)"
     uib-typeahead="c.code as c.title for c in countries | filter:$viewValue | limitTo:8">
 </span>
+
+<span ng-if="bind.model.isObject">
+  <input type="text" ng-model="bind.data"
+    uib-typeahead-editable="false"
+    typeahead-input-formatter="formatEntity($model)"
+    uib-typeahead="c as c.name for c in suggestEntities($viewValue)">
+</span>
+
+<span ng-if="bind.model.isTemporal">
+  <input pikaday="picker" on-select="onPikadaySelect(pikaday)">
+</span>
