--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -114,6 +114,7 @@
       "bower_components/angular-route/angular-route.js",
       "bower_components/angular-bootstrap/ui-bootstrap.js",
       "bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
+      "bower_components/pikaday-angular/pikaday-angular.js",
       "bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js",
       "bower_components/angulartics/src/angulartics.js",
       "bower_components/angulartics/src/angulartics-piwik.js" %}
