--- a/spindle/templates/angular/collections/view.html
+++ b/spindle/templates/angular/collections/view.html
@@ -1,10 +1,16 @@
 <div class="row">
   <div class="col-md-12">
     <div class="pull-right">
-      <a class="btn btn-success" ng-show="editable" ng-click="editSettings()">
-        <i class="fa fa-wrench"></i>
-        Settings
-      </a>
+      <div class="btn-group" role="group" aria-label="...">
+        <a class="btn btn-primary" ng-if="editable" ng-click="editSettings()">
+          <i class="fa fa-wrench"></i>
+          Settings
+        </a>
+        <a class="btn btn-success" ng-disabled="true">
+          <i class="fa fa-download"></i>
+          Download
+        </a>
+      </div>
     </div>
     <h2>
       {{collection.title}}
