Fix some UI bugs.

--- a/spindle/static/style/_editor.scss
+++ b/spindle/static/style/_editor.scss
@@ -7,6 +7,7 @@
 .entity-editor {
     th {
         min-width: 170px;
+        max-width: 300px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
