--- a/spindle/templates/angular/entities/editor.html
+++ b/spindle/templates/angular/entities/editor.html
@@ -1,10 +1,10 @@
-<div class="entity-editor table-box">
+<div class="entity-editor table-box" id="entity-editor">
   <table class="table table-striped table-bordered" ng-class="{'editable': editable}">
     <tr>
       <th ng-repeat="column in columns" ng-bind="column.title"></th>
     </tr>
     <tr ng-repeat="row in rows" ng-class="{'failed': row.failed}">
-      <td ng-repeat="cell in row.cells" class="entity-editor-cell"
+      <td ng-repeat="cell in row.cells" class="entity-editor-cell" id="cell-{{cell.serial}}"
         ng-class="{'selected': cell.selected}"
         ng-click="clickCell($parent.$index, $index, $event)">
         <bind-value ng-hide="cell.editing" bind="cell"></bind-value>
