--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -112,6 +112,7 @@
       "bower_components/angular/angular.js",
       "bower_components/angular-animate/angular-animate.js",
       "bower_components/angular-route/angular-route.js",
+      "bower_components/angular-scroll/angular-scroll.js",
       "bower_components/angular-bootstrap/ui-bootstrap.js",
       "bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
       "bower_components/pikaday-angular/pikaday-angular.js",
