--- a/spindle/static/style/_nav.scss
+++ b/spindle/static/style/_nav.scss
@@ -1,3 +1,10 @@
+body, html {
+    height: 100%;
+    font-size: .95em;
+    background-color: $occrp-dark;
+    // background-color: $gray-subtle;
+}
+
 #topnav {
     // background-color: $gray-subtle;
     background-color: $page-bg;
@@ -41,5 +48,26 @@
         border: 0;
         background-color: $page-bg;
         padding-right: 0;
+    }
+}
+
+// page and spinner
+#page {
+    position: relative;
+    padding-top: 70px;
+    padding-bottom: $spacing * 4;
+    min-height: 80%;
+    background-color: $page-bg;
+}
+
+footer {
+    color: $page-bg;
+    border-top: 1px solid $table-border-color;
+    padding-top: $spacing * 2;
+    padding-bottom: $spacing * 4;
+
+    a {
+        color: $page-bg;
+        text-decoration: underline;
     }
 }
