--- a/spindle/static/style/main.scss
+++ b/spindle/static/style/main.scss
@@ -32,34 +32,6 @@ a, a.action {
     cursor: pointer;
 }
 
-body, html {
-    height: 100%;
-    font-size: .95em;
-    background-color: $occrp-dark;
-    // background-color: $gray-subtle;
-}
-
-// page and spinner
-#page {
-    position: relative;
-    padding-top: 70px;
-    padding-bottom: $spacing * 4;
-    min-height: 80%;
-    background-color: $page-bg;
-}
-
-footer {
-    color: $page-bg;
-    border-top: 1px solid $table-border-color;
-    padding-top: $spacing * 2;
-    padding-bottom: $spacing * 4;
-
-    a {
-        color: $page-bg;
-        text-decoration: underline;
-    }
-}
-
 .empty-value {
     color: $text-muted;
 }
@@ -99,7 +71,7 @@ td.numeric, th.numeric {
 
 
 @import "spinner";
-@import "navbar";
+@import "nav";
 @import "search";
 @import "entity";
 @import "editor";
