--- a/spindle/static/style/_editor.scss
+++ b/spindle/static/style/_editor.scss
@@ -5,7 +5,7 @@
 }
 
 .entity-editor {
-    th {
+    th, td {
         min-width: 170px;
         max-width: 300px;
         overflow: hidden;
@@ -35,12 +35,6 @@
             outline: none;
             box-shadow: none;  
         }
-    }
-
-    td {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
     }
 
     td.selected {
