--- a/spindle/templates/angular/bind/edit.html
+++ b/spindle/templates/angular/bind/edit.html
@@ -26,5 +26,5 @@
 </span>
 
 <span ng-if="bind.model.isTemporal">
-  <input pikaday="picker" on-select="onPikadaySelect(pikaday)">
+  <input pikaday="picker" ng-model="bind.data" on-select="onPikadaySelect(pikaday)">
 </span>
