Move bind_value to libspindle

--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -125,7 +125,8 @@
       "js/lib/util.js",
       "js/lib/metadata.js",
       "js/lib/schema.js",
-      "js/lib/filters.js" %}
+      "js/lib/filters.js",
+      "js/lib/bind_value.js" %}
     <script src='{{ ASSET_URL }}'></script>
   {% endassets %}
 
@@ -135,7 +136,6 @@
       "js/services/session.js",
       "js/services/authz.js",
       "js/directives/permissions_edit.js",
-      "js/directives/bind_value.js",
       "js/directives/bind_edit.js",
       "js/directives/entity_icon.js",
       "js/directives/entity_table.js",
