Refactor collections loader to make sure all data is loaded pre-render.

--- a/spindle/templates/angular/collections/view.html
+++ b/spindle/templates/angular/collections/view.html
@@ -30,16 +30,15 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    <uib-tabset>
-      <uib-tab ng-repeat="model in models" active="model.active" select="setSchema(model, $event)">
-        <uib-tab-heading>
-          <entity-icon schema="model.schema.id"></entity-icon>
-          {{model.getPlural()}}
-        </uib-tab-heading>
-        <div ng-if="model.active">
-          <entity-editor model="model" collection="collection"></entity-editor>
-        </div>
-      </uib-tab>
-    </uib-tabset>
+    <ul class="nav nav-tabs">
+      <li ng-repeat="m in models" ng-class="{'active': m.schema.id == model.schema.id}">
+        <a ng-click="setModel(m)">
+          <entity-icon schema="m.schema.id"></entity-icon>
+          {{m.getPlural()}}
+        </a>
+      </li>
+    </ul>
+
+    <entity-editor model="model" collection="collection" entities="entities"></entity-editor>
   </div>
 </div>
