Fix numbers and dates formatting.

--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -102,6 +102,7 @@
   {% assets filters="uglifyjs", output="build/base.js",
       "bower_components/jquery/dist/jquery.js",
       "bower_components/moment/moment.js",
+      "bower_components/numeral/numeral.js",
       "bower_components/pikaday/pikaday.js" %}
     <script src='{{ ASSET_URL }}'></script>
   {% endassets %}
